--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,22 @@
 
 .read-the-docs {
   color: #888;
+}
+
+/*  */
+.header {
+  width: 100%;
+  background-color: white;
+  border: 0.5px solid black;
+  padding: 5px;
+}
+
+.header a {
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.header a:hover {
+  background-color: lightgray;
+  color: white;
 }
