--- a/client/src/index.css
+++ b/client/src/index.css
@@ -466,3 +466,19 @@ img.difficultyImage {
   border-radius: 100%;
   margin: 0.5px;
 }
+
+button#localizationButton {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  align-self: center;
+  width: 50px;
+  height: 50px;
+}
+
+/* button#localizationButton svg {
+  border: 1px solid black;
+} */
