--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,7 @@ button:focus-visible {
 html {
   box-sizing: border-box;
 }
+
 *,
 *:before,
 *:after {
@@ -95,9 +96,10 @@ html,
 body {
   height: 100%;
   margin: 0;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   color: #121212;
 }
+
 textarea,
 input,
 button {
@@ -111,6 +113,7 @@ button {
   line-height: 1.5;
   margin: 0;
 }
+
 button {
   color: #3992ff;
   font-weight: 500;
@@ -132,20 +135,24 @@ button:active {
   align-items: flex-start;
   gap: 1rem;
 }
+
 #contact h1 form {
   display: flex;
   align-items: center;
   margin-top: 0.25rem;
 }
+
 #contact h1 form button {
   box-shadow: none;
   font-size: 1.5rem;
   font-weight: 400;
   padding: 0;
 }
+
 #contact h1 form button[value="true"] {
   color: #a4a4a4;
 }
+
 #contact h1 form button[value="true"]:hover,
 #contact h1 form button[value="false"] {
   color: #eeb004;
@@ -169,6 +176,7 @@ form[action$="destroy"] button {
 
 #root {
   display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 }
@@ -181,7 +189,7 @@ form[action$="destroy"] button {
   flex-direction: column;
 }
 
-#sidebar > * {
+#sidebar>* {
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -205,7 +213,7 @@ form[action$="destroy"] button {
   top: 1px;
 }
 
-#sidebar > div {
+#sidebar>div {
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -214,11 +222,11 @@ form[action$="destroy"] button {
   border-bottom: 1px solid #e3e3e3;
 }
 
-#sidebar > div form {
+#sidebar>div form {
   position: relative;
 }
 
-#sidebar > div form input[type="search"] {
+#sidebar>div form input[type="search"] {
   width: 100%;
   padding-left: 2rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
@@ -228,7 +236,7 @@ form[action$="destroy"] button {
   position: relative;
 }
 
-#sidebar > div form input[type="search"].loading {
+#sidebar>div form input[type="search"].loading {
   background-image: none;
 }
 
@@ -246,6 +254,7 @@ form[action$="destroy"] button {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -261,6 +270,7 @@ form[action$="destroy"] button {
   float: right;
   color: #eeb004;
 }
+
 #sidebar nav a.active span {
   color: inherit;
 }
@@ -268,6 +278,7 @@ form[action$="destroy"] button {
 i {
   color: #818181;
 }
+
 #sidebar nav .active i {
   color: inherit;
 }
@@ -310,7 +321,7 @@ i {
 }
 
 #detail {
-  flex: 1;
+  flex: auto;
   padding: 2rem 4rem;
   width: 100%;
 }
@@ -333,11 +344,11 @@ i {
   line-height: 1.2;
 }
 
-#contact h1 + p {
+#contact h1+p {
   margin: 0;
 }
 
-#contact h1 + p + p {
+#contact h1+p+p {
   white-space: break-spaces;
 }
 
@@ -352,6 +363,7 @@ i {
   color: #3992ff;
   text-decoration: none;
 }
+
 #contact a[href*="twitter"]:hover {
   text-decoration: underline;
 }
@@ -365,7 +377,7 @@ i {
   object-fit: cover;
 }
 
-#contact h1 ~ div {
+#contact h1~div {
   display: flex;
   gap: 0.5rem;
   margin: 1rem 0;
@@ -377,21 +389,26 @@ i {
   flex-direction: column;
   gap: 1rem;
 }
-#contact-form > p:first-child {
+
+#contact-form>p:first-child {
   margin: 0;
   padding: 0;
 }
-#contact-form > p:first-child > :nth-child(2) {
+
+#contact-form>p:first-child> :nth-child(2) {
   margin-right: 1rem;
 }
-#contact-form > p:first-child,
+
+#contact-form>p:first-child,
 #contact-form label {
   display: flex;
 }
+
 #contact-form p:first-child span,
 #contact-form label span {
   width: 8rem;
 }
+
 #contact-form p:first-child input,
 #contact-form label input,
 #contact-form label textarea {
@@ -453,6 +470,61 @@ i {
 }
 
 /* Custom */
+nav {
+  background-color: #a4a4a4;
+  border: 1px solid red;
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 2rem;
+  padding: 0.5rem 1rem;
+  height: 50px;
+  align-items: center;
+}
+
+footer {
+  background-color: #a4a4a4;
+  padding: 0rem 0.5rem;
+}
+
+nav ul {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+nav ul a {
+  text-decoration: none;
+}
+
+nav ul a:visited {
+  color: inherit;
+}
+
+nav a.active {
+  background: hsl(224, 98%, 58%);
+  color: white;
+}
+
+nav a.pending {
+  color: hsl(224, 98%, 58%);
+}
+
+img.emblemImage {
+  width: 36px;
+  border: 1px solid black;
+  filter: invert(1);
+}
+
+div:has(> img.minimapImage) {
+  text-align: center;
+}
+
+img.minimapImage {
+  width: 70%;
+  filter: grayscale(1) invert(100%);
+}
 
 img.licenseImage {
   width: 20px;
@@ -482,3 +554,10 @@ button#localizationButton {
 /* button#localizationButton svg {
   border: 1px solid black;
 } */
+
+/* Overwrite some compact table styles because I think they're broken? */
+table.css-fe6cfp-Table {
+  overflow: initial;
+  position: initial;
+  height: 99%;
+}
