--- a/client/src/index.css
+++ b/client/src/index.css
@@ -561,3 +561,45 @@ table.css-fe6cfp-Table {
   position: initial;
   height: 99%;
 }
+
+.expandTableElement {
+  grid-column: 1 / -1;
+  padding: 8px 16px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: lightgray;
+}
+
+.expandTableElement div {
+  flex: 1 0 calc(50% - 10px);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.25);
+}
+
+.modal_content {
+  background-color: white;
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  width: 40%;
+  padding: 20px;
+  border-radius: 5px;
+  border: 2px solid black;
+}
+
+.close {
+  color: Black;
+  float: right;
+}
+
+.close:hover {
+  color: red;
+  cursor: pointer;
+}
